# combined-ob

./: Cargo.toml  README.md  Settings.toml
src/: main.rs  server.rs  settings.rs  shutdown.rs
src/exchange/: binance.rs  bitstamp.rs  mod.rs  util.rs
src/market_data/: mod.rs  orderbook.rs
src/msg/: level.rs  levels.rs  mod.rs
