[package]
name = "combined-ob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
float-ord = "0.3.2"
futures-util = "0.3.21"
lazy_static = "1.4.0"
prost = "0.10.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] } 
tonic = "0.7.2"
url = "2.2.2"

[build-dependencies]
tonic-build = "0.7.2"
